--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -1,20 +1,20 @@
 .statisticsContainer {
   max-width: 50%;
-  margin-top: 5vh;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 0.5rem;
+  border-radius: 8px;
 }
 
 .title {
   margin: 0;
-  padding: 2rem;
+  padding: 32px;
   text-transform: uppercase;
   text-align: center;
   color: #000;
   font-weight: bold;
-  font-size: 2.5rem;
+  font-size: 40px;
   border-bottom: 1px solid #d3d5e3;
   background-color: #fff;
 }
